# python-extractor-example

./: .gitignore  README.md
azure-iot-hub-extractor/: README.md  example_config.yaml  iothubconfig.py  iothubextractor.py  iothubmetrics.py  pyproject.toml
azure-iot-hub-extractor/iot_hub_extractor/: config.py  extractor.py  metrics.py
csv-extractor/: README.md  csvextractor.py  csvmetrics.py  example_config.yaml  pyproject.toml
csv-extractor-simple/: README.md  example_config.yaml  pyproject.toml
csv-extractor-simple/csv_extractor_simple/: __main__.py  config.py  extractor.py
csv-extractor/csv_extractor/: __main__.py  config.py  extractor.py  metrics.py
ice-cream-factory-datapoints-extractor/: README.md  extractor_config.yaml  pyproject.toml
ice-cream-factory-datapoints-extractor/ice_cream_factory_datapoints_extractor/: __main__.py  config.py  datapoints_backfiller.py  datapoints_streamer.py  extractor.py  ice_cream_factory_api.py
ice-cream-factory-datapoints-extractor/rest_extractor/: datapoints_backfiller.py  extractor.py  ice_cream_factory_api.py
weather-extractor/: README.md  example_config.yaml  main.py  met_client.py  pyproject.toml  remote_config.yaml  weatherconfig.py  weatherextractor.py  weathermetrics.py
weather-extractor-rest/: example_config.yaml  mypy.ini  pyproject.toml
weather-extractor-rest/met_extractor/: __main__.py  dto.py  extractor.py
weather-extractor/met_extractor/: __main__.py  config.py  met_client.py  streamer.py
